# agentswitch

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  README.md  ROADMAP-0.6.0.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.kiro/specs/phase1-core-foundation/: .config.kiro  requirements.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: packaging.md  roadmap.md
docs/superpowers/specs/: 2026-03-31-provider-model-separation-design.md
packaging/completions/: asw.bash  asw.fish  asw.zsh
packaging/debian/: postinst  postrm  prerm
packaging/man/: asw.1
scripts/: install.sh  prepare-release.sh  test-install.sh
specs/001-core-foundation/: .gitignore  Cargo.toml  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-foundation/checklists/: requirements.md
specs/001-install-packaging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-install-packaging/checklists/: requirements.md
specs/001-install-packaging/contracts/: deb-package.md  install-script.md
specs/002-agent-adapter/: ADAPTER_EXAMPLES.md  COMPLETION_REPORT.md  FINAL_COMPLETION_REPORT.md  VERIFICATION_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-agent-adapter/checklists/: requirements.md
specs/002-agent-adapter/contracts/: cli-commands.md
specs/003-preset-management/: IMPLEMENTATION_REPORT.md  PROPOSAL.md  TEST_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-preset-management/checklists/: requirements.md
specs/003-preset-management/contracts/: CLI.md
specs/004-ux-optimization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ux-optimization/checklists/: requirements.md
specs/004-ux-optimization/contracts/: CLI.md
src/: error.rs  main.rs
src/agents/: adapter.rs  claude_code.rs  codex.rs  gemini.rs  grok.rs  mod.rs  opencode.rs  qwen.rs  registry.rs
src/agents/examples/: custom_adapter.rs
src/backup/: manager.rs  mod.rs
src/batch/: mod.rs  status.rs  switch.rs  validate.rs
src/cli/: args.rs  commands.rs  mod.rs
src/completion/: dynamic_completion.rs  error.rs  install.rs  mod.rs  static_completion.rs
src/config/: config.rs  file_utils.rs  mod.rs  models.rs  provider.rs  store.rs
src/crypto/: cipher.rs  error.rs  keyring.rs  mod.rs
src/doctor/: detector.rs  error.rs  health.rs  mod.rs  reporter.rs  run.rs
src/io/: export.rs  import.rs  mod.rs  sanitizer.rs
src/output/: formatter.rs  mod.rs  theme.rs
src/presets/: apply.rs  error.rs  mod.rs  preset.rs  store.rs  validator.rs
src/sync/: config.rs  crypto.rs  error.rs  git_ops.rs  mod.rs
src/update/: checker.rs  mod.rs
src/utils/: mod.rs  permissions.rs  tty.rs  validation.rs
src/wizard/: error.rs  mod.rs  progress.rs  run.rs  state.rs  steps.rs
test-env/: Dockerfile  test.sh
tests/: installation_test.rs
tests/batch/: mod.rs  status_test.rs  switch_test.rs  validate_test.rs
tests/e2e/: common.sh  run_all.sh  test_agent.sh  test_aux.sh  test_backup.sh  test_core.sh  test_preset.sh  test_provider.sh
tests/fixtures/: sample-presets.json  sample-presets.toml
tests/installation/: install_test.rs  mod.rs  uninstall_test.rs
tests/integration/: config_init.rs  data_integrity.rs  mod.rs  model_crud.rs  performance_test.rs  switch_flow_test.rs  user_scenarios_test.rs
tests/integration/completion/: mod.rs  test_install.rs
tests/integration/doctor/: mod.rs  test_diagnostic.rs
tests/integration/sync/: mod.rs  test_sync.rs
tests/integration/wizard/: mod.rs  test_full_flow.rs
tests/io/: export_test.rs  import_test.rs  mod.rs  sanitizer_test.rs  validation_test.rs
tests/presets/: mod.rs  preset_test.rs
tests/unit/: mod.rs
tests/unit/agents/: claude_code_test.rs  codex_test.rs  gemini_test.rs  mod.rs
tests/unit/backup/: manager_test.rs
tests/unit/completion/: test_static.rs
tests/unit/config/: file_utils_test.rs  mod.rs
tests/unit/doctor/: test_detector.rs
tests/unit/sync/: test_crypto.rs
tests/unit/wizard/: test_state.rs  test_validators.rs
