[package]
name = "agentswitch"
version = "0.5.0"
edition = "2024"
authors = ["Yu-Xiao-Sheng <yu.xiao.sheng@example.com>"]
description = "一个通用的代码终端代理工具配置切换器，支持将任意 OpenAI 协议模型接入到主流 Code Agent 工具中"
license = "MIT"
repository = "https://github.com/Yu-Xiao-Sheng/agentswitch"
readme = "README.md"

[dependencies]
# CLI 框架
clap = { version = "4.5", features = ["derive"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 彩色输出
colored = "2.1"

# 路径处理
dirs = "5.0"
which = "6.0"

# URL 验证
url = "2.5"

# 表格输出
comfy-table = "7.1"

# 文件锁
fs2 = "0.4"

# 并发处理
rayon = "1.10"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 交互式输入（Spec 004）
inquire = "0.7"

# Shell 补全（Spec 004）
clap_complete = "4.5"

# Git 操作（Spec 004）
git2 = "0.18"

# 加密（Spec 004）
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"

[dev-dependencies]
# 测试依赖
tempfile = "3.10"

# DEB 包配置 (Spec 001)
[package.metadata.deb]
maintainer = "Yu-Xiao-Sheng <yu.xiao.sheng@example.com>"
copyright = "2026, Yu-Xiao-Sheng <yu.xiao.sheng@example.com>"
license-file = ["LICENSE", "0"]
depends = "$auto"
section = "utility"
priority = "optional"
extended-description = """\
AgentSwitch is a universal configuration switcher for code agent tools.
It allows you to easily switch between different AI model providers
across tools like Claude Code, Codex, Gemini CLI, and more.
"""

# 资源文件映射
assets = [
    ["target/release/agentswitch", "usr/bin/asw", "755"],
    ["packaging/man/asw.1", "usr/share/man/man1/asw.1", "644"],
    ["packaging/completions/asw.bash", "usr/share/bash-completion/completions/asw", "644"],
    ["packaging/completions/asw.zsh", "usr/share/zsh/vendor-completions/_asw", "644"],
    ["packaging/completions/asw.fish", "usr/share/fish/vendor_completions.d/asw.fish", "644"],
    ["README.md", "usr/share/doc/agentswitch/README.md", "644"],
    ["LICENSE", "usr/share/doc/agentswitch/LICENSE", "644"],
]

# 维护者脚本
maintainer-scripts = "packaging/debian"
