[package]
name = "asw"
version = "0.8.6"
edition = "2021"
authors = ["Yu-Xiao-Sheng <yu.xiao.sheng@example.com>"]
description = "一个通用的 Code Agent 工具配置切换器，支持将任意 OpenAI/Anthropic 协议模型接入到主流 Code Agent CLI 工具中"
license = "MIT"
repository = "https://github.com/Yu-Xiao-Sheng/agentswitch"
readme = "README.md"

[dependencies]
# CLI 框架
clap = { version = "4.5", features = ["derive"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 彩色输出
colored = "2.1"

# 路径处理
dirs = "5.0"
which = "6.0"

# URL 验证
url = "2.5"

# 表格输出
comfy-table = "7.1"

# 文件锁
fs2 = "0.4"

# 并发处理
rayon = "1.10"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 交互式输入（Spec 004）
inquire = "0.7"

# Shell 补全（Spec 004）
clap_complete = "4.5"

# Git 操作（Spec 004）
git2 = "0.18"

# 加密（Spec 004）
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"

# HTTP 客户端（用于模型测试和获取）
reqwest = { version = "0.12", features = ["blocking", "json"] }

# 版本比较（用于更新检测）
semver = { version = "1.0", features = ["serde"] }

[dev-dependencies]
# 测试依赖
tempfile = "3.10"
