[package]
name = "agentswitch"
version = "0.1.0"
edition = "2024"
authors = ["Yu-Xiao-Sheng <yu.xiao.sheng@example.com>"]
description = "一个通用的代码终端代理工具配置切换器，支持将任意 OpenAI 协议模型接入到主流 Code Agent 工具中"
license = "MIT"
repository = "https://github.com/Yu-Xiao-Sheng/agentswitch"
readme = "README.md"

[dependencies]
# CLI 框架
clap = { version = "4.5", features = ["derive"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 错误处理
anyhow = "1.0"

# 彩色输出
colored = "2.1"

# 路径处理
dirs = "5.0"

# URL 验证
url = "2.5"

# 表格输出
comfy-table = "7.1"

[dev-dependencies]
# 测试依赖
